plugins {
        id 'java-library'
        id 'eclipse'
}

compileJava {
            options.release = 14
}

repositories {
             mavenCentral()
}

tasks.withType(JavaCompile) {
   options.compilerArgs += "--enable-preview"
   options.release = 14
}

dependencies {
     testImplementation(platform('org.junit:junit-bom:5.7.0'))
     testImplementation('org.junit.jupiter:junit-jupiter')
}

test {
     jvmArgs(['--enable-preview'])
      useJUnitPlatform()
      testLogging {
      events "passed", "skipped", "failed"
      }
}


version = '1.2.1'
